# OpenCL_programs

./: .gitignore  CMakeLists.txt  README.md
Tester/: CMakeLists.txt
Tester/includes/: Application.hpp  FragmentShader.cl  TableResults.hpp  TestVector.hpp  VertexShader.cl  VertexShaderHalf.cl
Tester/sources/: Application.cpp  TableResults.cpp  TestVector.cpp  main.cpp
Tests/LoadConst/: LoadConst.cl  LoadConst.json
Tests/LoadScalarConst/: LoadScalarConst.cl
Tests/SimpleAdd/: Add.cl  Add.json
Tests/SimpleIndex/: Index.cl  Index.json
Tests/Vertex/: VertexShader.cl  VertexShader.json
scripts/: Compile_all_progs.py
